# rules_go_aspect_bug

./: WORKSPACE
a/abc/: BUILD.bazel
abc/: BUILD.bazel
